syntax = "proto3";

package si.aws_eks_cluster_runtime;

import "si-data/proto/si.data.proto";

service AwsEksClusterRuntime {
  rpc GetComponent(GetComponentRequest) returns (GetComponentReply);
  rpc ListComponents(ListComponentsRequest) returns (ListComponentsReply);
  rpc PickComponent(PickComponentRequest) returns (PickComponentReply);

  rpc CreateEntity(CreateEntityRequest) returns (CreateEntityReply);
  rpc ListEntities(ListEntitiesRequest) returns (ListEntitiesReply);
  rpc GetEntity(GetEntityRequest) returns (GetEntityReply);
  rpc SyncEntity(SyncEntityRequest) returns (SyncEntityReply);

  rpc ListEntityEvents(ListEntityEventsRequest) returns (ListEntityEventsReply);

  rpc AddNodegroup(AddNodegroupRequest) returns (AddNodegroupReply);
}

message AddNodegroupRequest {
  string entity_id = 1;
}

message AddNodegroupReply {
  EntityEvent event = 2;
}

message CreateEntityRequest {
  PickComponentRequest constraints = 1;
  string name = 2;
  string display_name = 3;
  string description = 4;
  string workspace_id = 5;
  bool cloudwatch_logs = 6;
  string node_group_ssh_key_id = 7;
  string node_group_aws_instance_type = 8;
  string node_group_disk_size_gib = 9;
  uint32 node_group_minimum_size = 10;
  uint32 node_group_maximum_size = 11;
  uint32 node_group_desired_size = 12;
  message TagRequest {
    string key = 1;
    string value = 2;
  }
  repeated TagRequest tags = 13;
}

message CreateEntityReply {
  Entity entity = 1;
  EntityEvent event = 2;
}

message GetComponentRequest {
  string component_id = 1;
}

message GetComponentReply {
  Component component = 1;
}

message GetEntityRequest {
  string entity_id = 1;
}

message GetEntityReply {
  Entity entity = 1;
}

message ListComponentsRequest {
  si.data.Query query = 1;
  int32 page_size = 2;
  string order_by = 3;
  si.data.OrderByDirection order_by_direction = 4;
  string page_token = 5;
  string scope_by_tenant_id = 6;
}

message ListComponentsReply {
  repeated Component items = 1;
  int32 total_count = 2;
  string next_page_token = 3;
}

message ListEntityEventsRequest {
  si.data.Query query = 1;
  int32 page_size = 2;
  string order_by = 3;
  si.data.OrderByDirection order_by_direction = 4;
  string page_token = 5;
  string scope_by_tenant_id = 6;
}

message ListEntityEventsReply {
  repeated EntityEvent items = 1;
  int32 total_count = 2;
  string next_page_token = 3;
}

message ListEntitiesRequest {
  si.data.Query query = 1;
  int32 page_size = 2;
  string order_by = 3;
  si.data.OrderByDirection order_by_direction = 4;
  string page_token = 5;
  string scope_by_tenant_id = 6;
}

message ListEntitiesReply {
  repeated Entity items = 1;
  int32 total_count = 2;
  string next_page_token = 3;
}

message PickComponentRequest {
  string name = 1;
  string display_name = 2;
  string integration_id = 3;
  string integration_service_id = 4;
  string kubernetes_version = 12;
}

message PickComponentReply {
  Component component = 1;
  repeated ImplicitConstraint implicit_constraints = 2;
}

message SyncEntityRequest {
  string entity_id = 1;
}

message SyncEntityReply {
  EntityEvent event = 2;
}

message Constraints {
  string name = 1;
  string display_name = 2;
  string integration_id = 3;
  string integration_service_id = 4;
  string kubernetes_version = 5;
}

message Component {
  string id = 1;
  repeated string tenantIds = 2;
  string natural_key = 3;
  string type_name = 4;
  string name = 5;
  string display_name = 6;
  string description = 7;
  string integration_id = 8;
  string integration_service_id = 9;
  string display_type_name = 10;
  int32 version = 11;
  // From here, we are in to the fields for this specific component
  string kubernetes_version = 12;
}

message Entity {
  string id = 1;
  repeated string tenantIds = 2;
  string natural_key = 3;
  string type_name = 4;
  string name = 5;
  string display_name = 6;
  string description = 7;
  string component_id = 8;
  string integration_id = 9;
  string integration_service_id = 10;
  string workspace_id = 11;
  string organization_id = 12;
  string billing_account_id = 13;
  repeated string linked_entity_ids = 14;
  Constraints constraints = 15;
  repeated ImplicitConstraint implicit_constraints = 16;

  // From here, we are in to the fields for this specific component
  string kubernetes_version = 17;
  // This is a real requirement, just like ndoe groups, and all that shit. It should be a real
  // requirement, which we haven't modeled yet *at all*
  bool cloudwatch_logs = 18;
  string node_group_ssh_key_id = 19;
  string node_group_aws_instance_type = 20;
  string node_group_disk_size_gib = 21;
  uint32 node_group_minimum_size = 22;
  uint32 node_group_maximum_size = 23;
  uint32 node_group_desired_size = 24;
  enum State {
    UNINITIALIZED = 0;
    ERROR = 1;
    OK = 2;
  }
  State state = 25;
  message Tag {
    string key = 1;
    string value = 2;
  }
  repeated Tag tags = 26;
  string cluster_name = 28;
  enum ClusterStatus {
    UNKNOWN_CLUSTER_STATUS = 0;
    CREATING = 1;
    ACTIVE = 2;
    DELETING = 3;
    FAILED = 4;
    UPDATING = 5;
  }
  ClusterStatus cluster_status = 27;
  string nodegroup_name = 29;
  enum NodegroupStatus {
    UNKNOWN_NODEGROUP_STATUS = 0;
    NODEGROUP_CREATING = 1;
    NODEGROUP_ACTIVE = 2;
    NODEGROUP_UPDATING = 3;
    NODEGROUP_DELETING = 4;
    NODEGROUP_CREATE_FAILED = 5;
    NODEGROUP_DELETE_FAILED = 6;
    NODEGROUP_DEGRADED = 7;
  }
  NodegroupStatus nodegroup_status = 30;
}

message EntityEvent {
  string id = 1;
  repeated string tenantIds = 2;
  string natural_key = 3;
  string type_name = 4;
  string user_id = 5;
  string action_name = 6;
  repeated string output_lines = 7;
  string create_time = 8;
  string updated_time = 9;
  string final_time = 10;
  bool finalized = 11;
  string entity_id = 12;
  string component_id = 13;
  string integration_id = 14;
  string integration_service_id = 15;
  string workspace_id = 16;
  string organization_id = 17;
  string billing_account_id = 18;
  Entity input_entity = 19;
  Entity output_entity = 20;
  enum NextState {
    NONE = 0;
    UNINITIALIZED = 1;
    ERROR = 2;
    OK = 3;
  }
  NextState next_state = 21;
  bool success = 22;
  string error_message = 23;
  repeated string error_lines = 24;
}

message ImplicitConstraint {
  string field = 1;
  string value = 2;
}
