syntax = "proto3";

import "google/protobuf/wrappers.proto";
//import "google/protobuf/uint32value.proto";

package si.kubernetes;

message MetaDataRequest {
  google.protobuf.StringValue name = 1;
  map<string, string> labels = 2;
}

message MetaData {
  google.protobuf.StringValue name = 1;
  map<string, string> labels = 2;
}

message LabelSelector {
  map<string, string> match_labels = 1;
}

message LabelSelectorRequest {
  map<string, string> match_labels = 1;
}

message PodTemplateSpec {
  si.kubernetes.MetaData metadata = 1;
  PodSpec spec = 2;
  message PodSpec {
    repeated Container containers = 1;
    message Container {
      google.protobuf.StringValue name = 1;
      google.protobuf.StringValue image = 2;
      message ContainerPorts {
        google.protobuf.UInt32Value container_port = 1;
      }
      repeated ContainerPorts ports = 3;
    }
  }
}

message PodTemplateSpecRequest {
  si.kubernetes.MetaDataRequest metadata = 1;
  PodSpecRequest spec = 2;
  message PodSpecRequest {
    repeated ContainerRequest containers = 1;
    message ContainerRequest {
      google.protobuf.StringValue name = 1;
      google.protobuf.StringValue image = 2;
      message ContainerPortsRequest {
        google.protobuf.UInt32Value container_port = 1;
      }
      repeated ContainerPortsRequest ports = 3;
    }
  }
}

// message MetaDataRequest {
//   string name = 1;
//   message LabelsRequest {
//     string key = 1;
//     string value = 2;
//   }
//   repeated LabelsRequest labels = 2;
// }
// 
// message MetaData {
//   string name = 1;
//   message Labels {
//     string key = 1;
//     string value = 2;
//   }
//   repeated Labels labels = 2;
// }
// 
// message LabelSelector {
//   repeated MatchLabels match_labels = 1;
//   message MatchLabels {
//     string key = 1;
//     string value = 2;
//   }
// }
// 
// message LabelSelectorRequest {
//   repeated MatchLabelsRequest match_labels = 1;
//   message MatchLabelsRequest {
//     string key = 1;
//     string value = 2;
//   }
// }
// 
// message PodTemplateSpec {
//   si.kubernetes.MetaData metadata = 1;
//   PodSpec spec = 2;
//   message PodSpec {
//     repeated Container containers = 1;
//     message Container {
//       string name = 1;
//       string image = 2;
//       message ContainerPorts {
//         int32 container_port = 1;
//       }
//       repeated ContainerPorts ports = 3;
//     }
//   }
// }
// 
// message PodTemplateSpecRequest {
//   si.kubernetes.MetaDataRequest metadata = 1;
//   PodSpecRequest spec = 2;
//   message PodSpecRequest {
//     repeated ContainerRequest containers = 1;
//     message ContainerRequest {
//       string name = 1;
//       string image = 2;
//       message ContainerPortsRequest {
//         int32 container_port = 1;
//       }
//       repeated ContainerPortsRequest ports = 3;
//     }
//   }
// }
// 
